--- a/index.html
+++ b/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-  <meta charset="UTF-8" />
-  <title>Moja pierwsza strona na GitHub Pages</title>
+    <meta charset="UTF-8">
+    <title>ASCII Art</title>
+    <style>
+        body {
+            background-color: black;
+            color: white;
+            font-family: monospace;
+            white-space: pre;
+            padding: 20px;
+        }
+    </style>
 </head>
 <body>
-  <h1>Witaj na mojej stronie!</h1>
-  <p>To jest moja pierwsza strona hostowana na GitHub Pages.</p>
+        ___           ___           ___           ___           ___           ___                    ___           ___                 
+       /\__\         /\  \         /\  \         /\__\         /\  \         /\__\                  /\  \         /\__\          ___   
+      /:/  /        /::\  \       /::\  \       /:/  /        /::\  \       /::|  |                /::\  \       /::|  |        /\  \  
+     /:/__/        /:/\:\  \     /:/\:\  \     /:/__/        /:/\:\  \     /:|:|  |               /:/\:\  \     /:|:|  |        \:\  \ 
+    /::\__\____   /:/  \:\  \   /:/  \:\  \   /::\  \ ___   /::\~\:\  \   /:/|:|__|__            /::\~\:\  \   /:/|:|__|__      /::\__\
+   /:/\:::::\__\ /:/__/ \:\__\ /:/__/ \:\__\ /:/\:\  /\__\ /:/\:\ \:\__\ /:/ |::::\__\          /:/\:\ \:\__\ /:/ |::::\__\  __/:/\/__/
+   \/_|:|~~|~    \:\  \ /:/  / \:\  \  \/__/ \/__\:\/:/  / \/__\:\/:/  / \/__/~~/:/  /          \:\~\:\ \/__/ \/__/~~/:/  / /\/:/  /   
+      |:|  |      \:\  /:/  /   \:\  \            \::/  /       \::/  /        /:/  /            \:\ \:\__\         /:/  /  \::/__/    
+      |:|  |       \:\/:/  /     \:\  \           /:/  /        /:/  /        /:/  /              \:\ \/__/        /:/  /    \:\__\    
+      |:|  |        \::/  /       \:\__\         /:/  /        /:/  /        /:/  /                \:\__\         /:/  /      \/__/    
+       \|__|         \/__/         \/__/         \/__/         \/__/         \/__/                  \/__/         \/__/               
+<pre>
+</pre>
 </body>
 </html>
