--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
-    <title>ASCII Art</title>
+    <title>słodka misia</title>
     <style>
         body {
             background-color: black;
