--- a/index.html
+++ b/index.html
@@ -2,30 +2,17 @@
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
-    <title>słodka misia</title>
-    <style>
-        body {
-            background-color: black;
-            color: white;
-            font-family: monospace;
-            white-space: pre;
-            padding: 20px;
-        }
-    </style>
+    <title>Oczy śledzące kursor</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-        ___           ___           ___           ___           ___           ___                    ___           ___                 
-       /\__\         /\  \         /\  \         /\__\         /\  \         /\__\                  /\  \         /\__\          ___   
-      /:/  /        /::\  \       /::\  \       /:/  /        /::\  \       /::|  |                /::\  \       /::|  |        /\  \  
-     /:/__/        /:/\:\  \     /:/\:\  \     /:/__/        /:/\:\  \     /:|:|  |               /:/\:\  \     /:|:|  |        \:\  \ 
-    /::\__\____   /:/  \:\  \   /:/  \:\  \   /::\  \ ___   /::\~\:\  \   /:/|:|__|__            /::\~\:\  \   /:/|:|__|__      /::\__\
-   /:/\:::::\__\ /:/__/ \:\__\ /:/__/ \:\__\ /:/\:\  /\__\ /:/\:\ \:\__\ /:/ |::::\__\          /:/\:\ \:\__\ /:/ |::::\__\  __/:/\/__/
-   \/_|:|~~|~    \:\  \ /:/  / \:\  \  \/__/ \/__\:\/:/  / \/__\:\/:/  / \/__/~~/:/  /          \:\~\:\ \/__/ \/__/~~/:/  / /\/:/  /   
-      |:|  |      \:\  /:/  /   \:\  \            \::/  /       \::/  /        /:/  /            \:\ \:\__\         /:/  /  \::/__/    
-      |:|  |       \:\/:/  /     \:\  \           /:/  /        /:/  /        /:/  /              \:\ \/__/        /:/  /    \:\__\    
-      |:|  |        \::/  /       \:\__\         /:/  /        /:/  /        /:/  /                \:\__\         /:/  /      \/__/    
-       \|__|         \/__/         \/__/         \/__/         \/__/         \/__/                  \/__/         \/__/               
-<pre>
-</pre>
+    <div class="eye">
+        <div class="pupil"></div>
+    </div>
+    <div class="eye">
+        <div class="pupil"></div>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
