--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
 </head>
 <body>
     <div class="eye">
-        <div class="pupil"></div>
+        <div class="iris">
+            <div class="pupil"></div>
+        </div>
     </div>
     <div class="eye">
-        <div class="pupil"></div>
+        <div class="iris">
+            <div class="pupil"></div>
+        </div>
     </div>
 
     <script src="script.js"></script>
